feat: add API to execute a method directly
